--- a/index.html
+++ b/index.html
@@ -15,11 +15,30 @@
 </head>
 
 <body>
+  <header>
+  <nav>
+    <h2>Fun Bus</h2>
+    <ul>
+      <li> <a href="#">Home</a></li>
+      <li> <a href="#">About Us</a></li>
+      <li> <a href="#">Blog</a></li>
+      <li> <a href="#">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+ <div class="top container">
+    <section class="welcome">
+      <div class="img bus">
+        <img src="img/fun-bus.jpg" alt="Fun Bus Pic">
+      </div>
+      <div class="text-content">
+        <h2>Welcome to Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition. </p>
+      </div>
+    </section>
+ </div>
 
-  
-     
   <div class="container home">
-   
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
