--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
   </nav>
 </header>
- <div class="top container">
+ <div class="top">
     <section class="welcome">
       <div class="img bus">
         <img src="img/fun-bus.jpg" alt="Fun Bus Pic">
